--- a/Kites-Yasmin/bin/AndroidManifest.xml
+++ b/Kites-Yasmin/bin/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.asterphoenix.kites.yasmin"
     android:versionCode="1"
@@ -7,11 +8,27 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="19" />
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@android:style/Theme.Holo.Light" >
+        <activity
+            android:name="com.asterphoenix.kites.yasmin.MainActivity"
+            android:label="@string/title_activity_main" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.asterphoenix.kites.yasmin.CatalogActivity"
+            android:label="@string/title_activity_catalog"
+            android:parentActivityName="com.asterphoenix.kites.yasmin.MainActivity" />
     </application>
 
 </manifest>
