--- a/Kites-Yasmin/AndroidManifest.xml
+++ b/Kites-Yasmin/AndroidManifest.xml
@@ -26,7 +26,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.asterphoenix.kites.yasmin.CatalogActivity"
+            android:name="com.asterphoenix.kites.yasmin.catalog.CatalogActivity"
             android:label="@string/title_activity_catalog"
             android:parentActivityName="com.asterphoenix.kites.yasmin.MainActivity" />
     </application>
