--- a/Kites-Yasmin/bin/AndroidManifest.xml
+++ b/Kites-Yasmin/bin/AndroidManifest.xml
@@ -29,6 +29,11 @@
             android:name="com.asterphoenix.kites.yasmin.catalog.CatalogActivity"
             android:label="@string/title_activity_catalog"
             android:parentActivityName="com.asterphoenix.kites.yasmin.MainActivity" />
+        <activity
+            android:name="com.asterphoenix.kites.yasmin.catalog.ProductActivity"
+            android:label="@string/title_activity_product"
+            android:parentActivityName="com.asterphoenix.kites.yasmin.catalog.CatalogActivity" />
+        
     </application>
 
 </manifest>
