--- a/Kites-Yasmin/AndroidManifest.xml
+++ b/Kites-Yasmin/AndroidManifest.xml
@@ -33,6 +33,10 @@
             android:name="com.asterphoenix.kites.yasmin.catalog.ProductActivity"
             android:label="@string/title_activity_product"
             android:parentActivityName="com.asterphoenix.kites.yasmin.catalog.CatalogActivity" />
+        <activity
+            android:name="com.asterphoenix.kites.yasmin.catalog.ProductDetailActivity"
+            android:label="@string/title_activity_detailProduct"
+            android:parentActivityName="com.asterphoenix.kites.yasmin.catalog.CatalogActivity" />
     </application>
 
 </manifest>
